--- a/build.xml
+++ b/build.xml
@@ -1,72 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="Project1" >
-	
+<project name="Project1" default="compile" basedir=".">
 	<description>
-		Running JUnit Tests through Ant 
+		Build file for Project1
 	</description>
 	
-	<!-- Project Structure -->
-		<property name="jdk.version" value="1.8" />
-		<property name="Project1" value="JavaProject" />
-		<property name="src.dir" location="src" />
-		<property name="test.dir" location="src" />
+	<!-- global properties for this build file -->
+	<property name="source.dir" location="src“ />
+	<property name="build.dir" location="bin“ />
+	<property name="doc.dir" location="doc“ />
 	
-	<!-- Compile Java source from ${src.dir} -->
-	<target name="compile" depends="init" description="compile source code">
-		<javac includeantruntime="false" srcdir="./src" destdir="staging">  
-		
-		</javac>
-			<classpath path= "C:/Applications/Eclipse.app/Contents/Eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar" />
-		
-		<junit>
-			<test name="tests.MapReaderTests" />
-			<classpath location="lib/junit_4.12.0.v201504281640/junit.jar">
-				<pathelement location="C:/Applications/Eclipse.app/Contents/Eclipse/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
-				<pathelement location="staging" />
-			</classpath>
-	
-		</junit>
-		
+	<!-- set up some directories used by this project -->
+	<target name="init" description="setup project directories">
+		<mkdir dir="${build.dir}“ />
+		<mkdir dir="${doc.dir}“ />
 	</target>
 	
-	<!-- Run jUnit -->
-		<target name="junit" depends="compile">
-
-		  <junit printsummary="yes" haltonfailure="no">
-		
-			<classpath refid="test.path" />
-			<classpath location="${web.classes.dir}" />
-				
-			<formatter type="xml" />
-			<batchtest fork="yes" todir="${report.dir}">
-				<fileset dir="${test.dir}">
-					<include name="**/*Test*.java" />
-				</fileset>
-			</batchtest>
-				
-		  </junit>
-		</target>
-
-	<target name="run" depends="compile">
-		<java classname= "code.MapReader">
-			<arg value="${arg0}" />
-			<arg value="${arg1}" />
-		</java>
+	<!-- Compile the java code in ${src.dir} into ${build.dir} -->
+	<target name="compile" depends="init" description="compile java sources">
+		<javac srcdir="${source.dir}" destdir="${build.dir}“ />
 	</target>
 	
-	<!-- Create folders -->
-	<target name="init">
-		<mkdir dir="${src.dir}" />
+	<!-- Generate javadocs for current project into ${doc.dir} -->
+	<target name="doc" depends="init" description="generate documentation">
+		<javadoc sourcepath="${source.dir}" destdir="${doc.dir}“ />
 	</target>
-
-	<!-- Delete folders -->
-	<target name="clean" description="clean up">
-		<delete dir="${web.classes.dir}" />
-		<delete dir="${report.dir}" />
+	
+	<!-- Delete the build & doc directories and Emacs backup (*~) files -->
+	<target name="clean" description="tidy up the workspace">
+		<delete dir="${build.dir}“ />
+		<delete dir="${doc.dir}“ />
+		<delete>
+			<fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~“ />
+		</delete>
 	</target>
-
-	<target name="main" depends="junit" />
-	
-	
-</project> 
+</project>
