--- a/build.xml
+++ b/build.xml
@@ -6,32 +6,63 @@
 	</description>
 	
 	<!-- global properties for this build file -->
-	<property name="source.dir" location="src“ />
-	<property name="build.dir" location="bin“ />
-	<property name="doc.dir" location="doc“ />
+	<property name="source.dir" location="src" />
+	<property name="build.dir" location="bin"/>
+	<property name="doc.dir" location="doc" />
+	<property name="dist.dir" location="dist" />
+	
+	<path id="test.path">
+		<pathelement location="junit-4.10.jar"/>
+		<pathelement location="hamcrest-core-1.3.jar"/>
+	</path>
 	
 	<!-- set up some directories used by this project -->
 	<target name="init" description="setup project directories">
-		<mkdir dir="${build.dir}“ />
-		<mkdir dir="${doc.dir}“ />
+		<mkdir dir="${build.dir}" />
+		<mkdir dir="${doc.dir}" />
 	</target>
 	
 	<!-- Compile the java code in ${src.dir} into ${build.dir} -->
 	<target name="compile" depends="init" description="compile java sources">
-		<javac srcdir="${source.dir}" destdir="${build.dir}“ />
+		<javac includeantruntime="false" srcdir="${source.dir}" destdir="${build.dir}" >
+			<classpath refid="classPath.test" />
+		</javac>
 	</target>
 	
 	<!-- Generate javadocs for current project into ${doc.dir} -->
 	<target name="doc" depends="init" description="generate documentation">
-		<javadoc sourcepath="${source.dir}" destdir="${doc.dir}“ />
+		<javadoc sourcepath="${source.dir}" destdir="${doc.dir}" />
 	</target>
 	
 	<!-- Delete the build & doc directories and Emacs backup (*~) files -->
 	<target name="clean" description="tidy up the workspace">
-		<delete dir="${build.dir}“ />
-		<delete dir="${doc.dir}“ />
+		<delete dir="${build.dir}" />
+		<delete dir="${doc.dir}" />
 		<delete>
-			<fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~“ />
+			<fileset defaultexcludes="no" dir="${source.dir}" includes="**/*~" />
 		</delete>
 	</target>
+	
+	<target name="dist" depends="compile" description="make dist">
+		<jar jarfile="${dist.dir}/Project1.jar" basedir="${build.dir}" includes="**"/>
+	</target>		
+	
+	<!-- JUnit Test -->
+	<target name="test" depends="compile" description="Runs JUnit Test">
+		<junit printsummary="yes" haltonfailure="yes" showoutput="yes">
+				
+			<classpath refid="test.path" />
+			<classpath location="${build.dir}" />
+			
+			<!-- Make sure these two libraries are included -->
+			<classpath location="lib/junit-4.11.jar" />
+			<classpath location="lib/hamcrest-core-1.3.jar" />
+			
+			<test name="TestCity" />
+			<test name="TestMapReader" />
+			<test name="TestParser" />
+			
+		</junit>
+	</target>	
+			
 </project>
